<resources>
    <string name="app_name">Percentage Calculator</string>
    <string name="ok">OK</string>
    <string name="authorname" translatable="false">Barış Deniz Tekin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about" translatable="false">Barış Deniz Tekin</string>
    <string name="cancel">Cancel</string>
    <string name="yuzdetxt">Percentage</string>
    <string name="calculate">Calculate</string>
    <string name="welcometxt">Welcome</string>
    <string name="result">"Result: "</string>
    <string name="AuthorText">"Created by "</string>
    <string name="yuzdesayitxt">Number</string>
</resources>